fix spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,9 +63,9 @@ h2 {
 	color:$blue-medium;
 	font-size:1.5rem;
 	font-weight:400;
-	line-height:2rem;
+	line-height:1.5rem;
 	margin:0;
-	padding:0;
+	padding:.3rem 0;
 	text-shadow:-1px 1px 0 $blue-medium-shadow;
 	text-transform:capitalize;
 }
@@ -73,13 +73,13 @@ h2 a {}
 h2 a:hover {}
 
 h3 {
-	margin:0;
+	margin:.5rem 0;
 	padding:0;
 	font-size:1.2rem;
 	font-weight:400;
 	text-transform:capitalize;
 	color:$blue-medium;
-	line-height:2.2rem;
+	line-height:1.7rem;
 	text-shadow:-1px 1px 0 $blue-light-shadow;
 }
 h3 a {}
@@ -88,8 +88,8 @@ h3 a:hover {}
 h4 {
 	font-size:1rem;
 	text-transform:capitalize;
-	line-height:2rem;
-	margin:0;
+	line-height:1.5rem;
+	margin:.2rem 0;
 	padding:0;
 	color:$blue-dark;
 }
@@ -99,7 +99,7 @@ h4 a:hover {}
 h5 {
 	font-size:1rem;
 	text-transform:capitalize;
-	margin:.5rem 0;
+	margin:.2rem 0;
 	padding:0;
 	line-height:1.5rem;
 	color:$blue-medium;
